--- a/style.css
+++ b/style.css
@@ -1,33 +1,39 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-nav{
+
+nav {
     background-color: #21189d;
     padding: 10px 60px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-nav .logo a{
+
+nav .logo a {
     text-decoration: none;
     color: rgb(255, 255, 255);
     font-size: 35px;
     font-weight: 600;
 }
-nav ul{
+
+nav ul {
     display: flex;
     align-items: center;
     list-style: none;
     padding: 10px;
 }
-nav li{
+
+nav li {
     margin-left: 7px;
 }
-nav li a{
+
+nav li a {
     text-decoration: none;
     color: rgb(255, 255, 255);
     font-size: 18px;
@@ -36,13 +42,15 @@ nav li a{
     border-radius: 5px;
     transition: 0.3s;
 }
-nav li a:hover{
+
+nav li a:hover {
     background-color: rgb(0, 0, 0);
     color: rgb(218, 184, 184);
 }
-.banner{
+
+.banner {
     height: 100vh;
-    background: linear-gradient( rgba(0, 0, 0, 0.226), rgba(0, 0, 0, 0.308)),url('background.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.226), rgba(0, 0, 0, 0.308)), url('background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -51,20 +59,24 @@ nav li a:hover{
     justify-content: center;
     text-align: center;
 }
-.texto .titulo{
+
+.texto .titulo {
     color: rgb(255, 255, 255);
     font-size: 60px;
     font-weight: 600;
 }
-.texto .sub_titulo{
+
+.texto .sub_titulo {
     color: rgb(255, 255, 255);
     font-size: 58px;
     font-weight: 600;
 }
-.texto .botoes{
+
+.texto .botoes {
     margin-top: 30px;
 }
-.texto .botoes button{
+
+.texto .botoes button {
     height: 55px;
     width: 170px;
     border-radius: 5px;
@@ -77,28 +89,100 @@ nav li a:hover{
     outline: none;
     transition: 0.3s;
 }
-.texto .botoes button.n-overlay{
+
+.texto .botoes button.n-overlay {
     color: white;
     background: none;
     border: 2px solid white;
 }
-.texto .botoes button.n-overlay:hover{
+
+.texto .botoes button.n-overlay:hover {
     color: rgb(0, 0, 0);
     background-color: white;
 }
-.texto .botoes button.overlay{
+
+.texto .botoes button.overlay {
     background: white;
     color: rgb(6, 6, 6);
     animation: vibrar 0.5s ease-in-out infinite both;
 }
+
 @keyframes vibrar {
-    0%{
+    0% {
         transform: scale(1);
     }
-    50%{
+
+    50% {
         transform: scale(1.1);
     }
-    100%{
+
+    100% {
         transform: scale(1);
     }
+}
+
+.footer {
+    display: flex;
+    
+    
+    background-color: black;
+    color: #ffffff;
+}
+
+.footer_link {
+    margin-top: 10px;
+    width: 50%;
+    min-width: 250px;
+    display: inline-block;
+    vertical-align: top;
+
+}
+
+.footer_link a {
+    text-decoration: none;
+    color: #ffffff;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 48px;
+    margin-top: 2px;
+    margin-left: 20px;
+}
+
+
+.imagem {
+    margin-top: 30px;
+    width: 50%;
+    
+
+    min-width: 250px;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.imagem p {
+    width: 50%;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+
+    text-align: center;
+}
+
+img {
+    width: 20%;
+    border-radius: 180px;
+    
+}
+#img{
+    margin-right: none;
+}
+#copy{
+    font-size: 10px;
+    background-color: black;
+    color: #ffffff;
+    text-align: center;
+
 }
